# robotics_control_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: kalman_example.cpp  kalman_solved.txt  pid_example.cpp  pid_solved.txt  transform_solved.txt
include/control/: lqr_controller.hpp  state_space.hpp
include/estimation/: kalman_filter.hpp
src/: CMakeLists.txt  kalman_filter.cpp  state_space.cpp
tests/: CMakeLists.txt  test_kalman.cpp  test_lqr.cpp  test_pid.cpp  test_state_space.cpp
